fixed themecard alignment across themes, basic themecard format for carousel in modern

--- a/src/components/Modern/App.css
+++ b/src/components/Modern/App.css
@@ -87,13 +87,14 @@
    }
   
    #lpiwmoderninner {
-    width: 25%;
-     display: inline;
+    width: 100%;
      margin-left: auto;
      margin-right: auto;
      color: white;
-     background-color: rgb(27, 27, 129);
-     height: 25px;
+     background-color: rgb(0, 0, 0);
+     height: 205px;
+     border-top: 8px solid rgb(27, 27, 129);
+     border-bottom: 8px solid rgb(27, 27, 129);
    }
   
   #buttonwrap {
@@ -170,11 +171,9 @@
   opacity: 1;
    }
    
-#themecardallwrap {
-  float: left;
-  display: block;
-  overflow: scroll;
-  position: relative;
+   #themecardallwrap {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
 }
 
 #navbarwrapmain {
@@ -191,7 +190,6 @@
     font-family: sans-serif;
      width: 303px;
      margin-left: auto;
-     float: left;
      margin-right: auto;
    }
   
